--- a/Planets_Sun_tierra_luna/index.html
+++ b/Planets_Sun_tierra_luna/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Ejemplo Three.js</title>
+<title>Planetas Three.js</title>
 <script  type="text/javascript"  src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
 <script  type="text/javascript"  src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.js"></script>
 </head>
