--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
         <span id="span4"></span>
         MOON
     </a>
+    <a href="./Moon/moon.html" class="btn-neon">
+        <span id="span1"></span>
+        <span id="span2"></span>
+        <span id="span3"></span>
+        <span id="span4"></span>
+        SOL
+    </a>
     <a href="./Planets_Sun_tierra_luna/index.html" class="btn-neon">
         <span id="span1"></span>
         <span id="span2"></span>
