Creacion del sol

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <span id="span4"></span>
         MOON
     </a>
-    <a href="./Moon/moon.html" class="btn-neon">
+    <a href="./Sun/sun.html" class="btn-neon">
         <span id="span1"></span>
         <span id="span2"></span>
         <span id="span3"></span>
